BLD: Add all interface symbols

--- a/interface/meson.build
+++ b/interface/meson.build
@@ -169,6 +169,122 @@ _blas_roots = [
   { 'base': '?syr2', '_types': ['c', 'z', 'x'],
     'fname': 'zsyr2.c',
   },
+  { 'base': '?gbmv', '_types': ['s', 'd', 'q'],
+    'fname': 'gbmv.c',
+  },
+  { 'base': '?gbmv', '_types': ['c', 'z', 'x'],
+    'fname': 'zgbmv.c',
+  },
+  { 'base': '?sbmv', '_types': ['s', 'd', 'q'],
+    'fname': 'sbmv.c',
+  },
+  { 'base': '?sbmv', '_types': ['c', 'z', 'x'],
+    'fname': 'zsbmv.c',
+  },
+  { 'base': '?spmv', '_types': ['s', 'd', 'q'],
+    'fname': 'spmv.c',
+  },
+  # TODO: NO_LAPACK
+  { 'base': '?spmv', '_types': ['c', 'z', 'x'],
+    'fname': 'zspmv.c',
+  },
+  { 'base': '?spr', '_types': ['s', 'd', 'q'],
+    'fname': 'spr.c',
+  },
+  { 'base': '?spr', '_types': ['c', 'z', 'x'],
+    'fname': 'zspr.c',
+  },
+  { 'base': '?spr2', '_types': ['s', 'd', 'q'],
+    'fname': 'spr2.c',
+  },
+  { 'base': '?spr2', '_types': ['c', 'z', 'x'],
+    'fname': 'zspr2.c',
+  },
+  { 'base': '?tbmv', '_types': ['s', 'd', 'q'],
+    'fname': 'tbmv.c',
+  },
+  { 'base': '?tbmv', '_types': ['c', 'z', 'x'],
+    'fname': 'ztbmv.c',
+  },
+  { 'base': '?tbsv', '_types': ['s', 'd', 'q'],
+    'fname': 'tbsv.c',
+  },
+  { 'base': '?tbsv', '_types': ['c', 'z', 'x'],
+    'fname': 'ztbsv.c',
+  },
+  { 'base': '?tpsv', '_types': ['s', 'd', 'q'],
+    'fname': 'tpsv.c',
+  },
+  { 'base': '?tpsv', '_types': ['c', 'z', 'x'],
+    'fname': 'ztpsv.c',
+  },
+  { 'base': '?tpmv', '_types': ['s', 'd', 'q'],
+    'fname': 'tpmv.c',
+  },
+  { 'base': '?tpmv', '_types': ['c', 'z', 'x'],
+    'fname': 'ztpmv.c',
+  },
+  { 'base': '?hemv', '_types': ['c', 'z', 'x'],
+    'fname': 'zhemv.c',
+  },
+  { 'base': '?hbmv', '_types': ['c', 'z', 'x'],
+    'fname': 'zhbmv.c',
+  },
+  { 'base': '?her', '_types': ['c', 'z', 'x'],
+    'fname': 'zher.c',
+  },
+  { 'base': '?her2', '_types': ['c', 'z', 'x'],
+    'fname': 'zher2.c',
+  },
+  { 'base': '?hpmv', '_types': ['c', 'z', 'x'],
+    'fname': 'zhpmv.c',
+  },
+  { 'base': '?hpr', '_types': ['c', 'z', 'x'],
+    'fname': 'zhpr.c',
+  },
+  { 'base': '?hpr2', '_types': ['c', 'z', 'x'],
+    'fname': 'zhpr2.c',
+  },
+  # TODO: BUILD_BFLOAT16 here, Makefile:1303
+  { 'base': '?gemm', '_types': ['s', 'd', 'q', 'c', 'z', 'x'],
+    'fname': ['gemm.c', '../param.h'], # TODO: Will this work?
+  },
+  { 'base': '?gemmt', '_types': ['s', 'd', 'q', 'c', 'z', 'x'],
+    'fname': ['gemmt.c', '../param.h'],
+  },
+  { 'base': '?symm', '_types': ['s', 'd', 'q', 'c', 'z', 'x'],
+    'fname': 'symm.c',
+  },
+  { 'base': '?trmm', '_types': ['s', 'd', 'q', 'c', 'z', 'x'],
+    'fname': 'trsm.c', 'def': [ 'TRMM' ], 'undef': [ ],
+  },
+  { 'base': '?trsm', '_types': ['s', 'd', 'q', 'c', 'z', 'x'],
+    'fname': 'trsm.c',
+  },
+  { 'base': '?syrk', '_types': ['s', 'd', 'q', 'c', 'z', 'x'],
+    'fname': 'syrk.c',
+  },
+  { 'base': '?syr2k', '_types': ['s', 'd', 'q', 'c', 'z', 'x'],
+    'fname': 'syr2k.c',
+  },
+  { 'base': '?hemm', '_types': ['c', 'z', 'x'],
+    'fname': 'symm.c', 'def': [ 'HEMM' ], 'undef': [ ],
+  },
+  { 'base': '?herk', '_types': ['c', 'z', 'x'],
+    'fname': 'syrk.c', 'def': [ 'HEMM' ], 'undef': [ ],
+  },
+  { 'base': '?her2k', '_types': ['c', 'z', 'x'],
+    'fname': 'syr2k.c', 'def': [ 'HEMM' ], 'undef': [ ],
+  },
+  { 'base': '?gemm3m', '_types': ['c', 'z', 'x'],
+    'fname': 'gemm.c', 'def': [ 'GEMM3M' ], 'undef': [ ],
+  },
+  { 'base': '?symm3m', '_types': ['c', 'z', 'x'],
+    'fname': 'symm.c', 'def': [ 'GEMM3M' ], 'undef': [ ],
+  },
+  { 'base': '?hemm3m', '_types': ['c', 'z', 'x'],
+    'fname': 'symm.c', 'def': [ 'HEMM', 'GEMM3M' ], 'undef': [ ],
+  },
 ]
 
 # addl_srcs = {
