--- a/meson.build
+++ b/meson.build
@@ -256,14 +256,22 @@ endif
 # Also see:
 # L1: https://www.intel.com/content/www/us/en/docs/onemkl/developer-reference-c/2024-1/blas-level-1-routines-and-functions.html
 precision_mappings = {
-    's': {'undef': ['COMPLEX', 'DOUBLE'], 'def': []},
+    's': {'undef': ['COMPLEX', 'DOUBLE']},
     'd': {'undef': ['COMPLEX'], 'def': ['DOUBLE']},
     'q': {'undef': ['COMPLEX'], 'def': ['XDOUBLE']},
     'c': {'undef': ['DOUBLE'], 'def': ['COMPLEX']},
-    'z': {'undef': [], 'def': ['COMPLEX', 'DOUBLE']},
-    'x': {'undef': [], 'def': ['COMPLEX', 'XDOUBLE']},
+    'z': {'def': ['COMPLEX', 'DOUBLE']},
+    'x': {'def': ['COMPLEX', 'XDOUBLE']},
     'cs': {'undef': ['DOUBLE'], 'def': ['COMPLEX']},
-    # zd is the same as z
+    'sc': {'undef': ['DOUBLE'], 'def': ['COMPLEX']},
+    'dz': {'def': ['COMPLEX', 'DOUBLE']},
+    'zd': {'def': ['COMPLEX', 'DOUBLE']},
+    'qx': {'def': ['COMPLEX', 'DOUBLE']},
+    'xq': {'def': ['COMPLEX', 'DOUBLE']},
+    '': {}, # special case, for cblas_?dot*_sub
+    # xq / qx == x
+    # sc / cs == c
+    # zd / dz is the same as z
     # 'zd': {'undef': [], 'def': ['COMPLEX', 'DOUBLE']},
 }
 
@@ -271,7 +279,7 @@ precision_mappings = {
 _inc = include_directories('.')
 # subdir('lapack-netlib')
 subdir('interface')
-subdir('kernel')
+# subdir('kernel')
 
-_openblas = static_library('openblas',
-                    link_whole: [ _interface, _kern])
+# _openblas = static_library('openblas',
+#                     link_whole: [ _interface, _kern])
