--- a/Makefile.system
+++ b/Makefile.system
@@ -811,9 +811,11 @@ ifeq ($(ARCH), arm)
 NO_BINARY_MODE  = 1
 BINARY_DEFINED  = 1
 
-ifneq ($(OS_EMBEDDED), 1)
+ifneq ($(EMBEDDED), 1)
 CCOMMON_OPT += -marm
 FCOMMON_OPT += -marm
+else
+CCOMMON_OPT += -DOS_EMBEDDED
 endif
 
 # If softfp abi is mentioned on the command line, force it.
