ENH: Finalize symbols in interface
From the Makefile, with notes on missing symbols
The missing symbols are not built in the standard make build either.

--- a/interface/meson.build
+++ b/interface/meson.build
@@ -349,6 +349,193 @@ _blas_roots = [
   { 'base': '?hemm3m', '_types': ['c', 'z', 'x'],
     'fname': 'symm.c', 'def': [ 'HEMM', 'GEMM3M' ], 'undef': [ ],
   },
+  { 'base': '?getf2', '_types': ['s', 'd'],
+    'fname': 'lapack/getf2.c',
+  },
+  # TODO: Makefile: 2074:2076 but doesn't exist
+  # { 'base': '?getf2', '_types': ['q'],
+  #   'fname': 'getf2.c',
+  # },
+  { 'base': '?getf2', '_types': ['c', 'z'],
+    'fname': 'lapack/zgetf2.c',
+  },
+  # TODO: Makefile: 2083:2085 but doesn't exist
+  # { 'base': '?getf2', '_types': ['x'],
+  #   'fname': 'zgetf2.c',
+  # },
+  { 'base': '?getrf', '_types': ['s', 'd'],
+    'fname': 'lapack/getrf.c',
+  },
+  # TODO: Not built, as are the other commented xdouble ones
+  # { 'base': '?getrf', '_types': ['q'],
+  #   'fname': 'getrf.c',
+  # },
+  { 'base': '?getrf', '_types': ['c', 'z'],
+    'fname': 'lapack/zgetrf.c',
+  },
+  # { 'base': '?getrf', '_types': ['x'],
+  #   'fname': 'zgetrf.c',
+  # },
+  { 'base': '?lauu2', '_types': ['s', 'd'],
+    'fname': 'lapack/lauu2.c',
+  },
+  # { 'base': '?lauu2', '_types': ['q'],
+  #   'fname': 'lauu2.c',
+  # },
+  { 'base': '?lauu2', '_types': ['c', 'z'],
+    'fname': 'lapack/zlauu2.c',
+  },
+  # { 'base': '?lauu2', '_types': ['x'],
+  #   'fname': 'zlauu2.c',
+  # },
+  { 'base': '?lauum', '_types': ['s', 'd'],
+    'fname': 'lapack/lauum.c',
+  },
+  # { 'base': '?lauum', '_types': ['q'],
+  #   'fname': 'lauum.c',
+  # },
+  { 'base': '?lauum', '_types': ['c', 'z'],
+    'fname': 'lapack/zlauum.c',
+  },
+  # { 'base': '?lauum', '_types': ['x'],
+  #   'fname': 'zlauum.c',
+  # },
+  { 'base': '?potf2', '_types': ['s', 'd'],
+    'fname': 'lapack/potf2.c',
+  },
+  # { 'base': '?potf2', '_types': ['q'],
+  #   'fname': 'potf2.c',
+  # },
+  { 'base': '?potf2', '_types': ['c', 'z'],
+    'fname': 'lapack/zpotf2.c',
+  },
+  # { 'base': '?potf2', '_types': ['x'],
+  #   'fname': 'zpotf2.c',
+  # },
+  { 'base': '?potrf', '_types': ['s', 'd'],
+    'fname': 'lapack/potrf.c',
+  },
+  # { 'base': '?potrf', '_types': ['q'],
+  #   'fname': 'potrf.c',
+  # },
+  { 'base': '?potrf', '_types': ['c', 'z'],
+    'fname': 'lapack/zpotrf.c',
+  },
+  # { 'base': '?potrf', '_types': ['x'],
+  #   'fname': 'zpotrf.c',
+  # },
+  { 'base': '?trti2', '_types': ['s', 'd'],
+    'fname': 'lapack/trti2.c',
+  },
+  # { 'base': '?trti2', '_types': ['q'],
+  #   'fname': 'trti2.c',
+  # },
+  { 'base': '?trti2', '_types': ['c', 'z'],
+    'fname': 'lapack/ztrti2.c',
+  },
+  # { 'base': '?trti2', '_types': ['x'],
+  #   'fname': 'ztrti2.c',
+  # },
+  # { 'base': '?trti', '_types': ['s', 'd'],
+  #   'fname': 'lapack/trti.c',
+  # },
+  # { 'base': '?trti', '_types': ['q'],
+  #   'fname': 'trti.c',
+  # },
+  # { 'base': '?trti', '_types': ['c', 'z'],
+  #   'fname': 'lapack/ztrti.c',
+  # },
+  # { 'base': '?trti', '_types': ['x'],
+  #   'fname': 'ztrti.c',
+  # },
+  { 'base': '?laswp', '_types': ['s', 'd'],
+    'fname': 'lapack/laswp.c',
+  },
+  # { 'base': '?laswp', '_types': ['q'],
+  #   'fname': 'laswp.c',
+  # },
+  { 'base': '?laswp', '_types': ['c', 'z'],
+    'fname': 'lapack/zlaswp.c',
+  },
+  # { 'base': '?laswp', '_types': ['x'],
+  #   'fname': 'zlaswp.c',
+  # },
+  { 'base': '?getrs', '_types': ['s', 'd', 'q'],
+    'fname': 'lapack/getrs.c',
+  },
+  { 'base': '?getrs', '_types': ['c', 'z', 'x'],
+    'fname': 'lapack/zgetrs.c',
+  },
+  { 'base': '?trtrs', '_types': ['s', 'd', 'q'],
+    'fname': 'lapack/trtrs.c',
+  },
+  { 'base': '?trtrs', '_types': ['c', 'z', 'x'],
+    'fname': 'lapack/ztrtrs.c',
+  },
+  { 'base': '?gesv', '_types': ['s', 'd', 'c', 'z'],
+    'fname': 'lapack/gesv.c',
+  },
+  # { 'base': '?gesv', '_types': ['q'],
+  #   'fname': 'gesv.c',
+  # },
+  # { 'base': '?gesv', '_types': ['x'],
+  #   'fname': 'zgesv.c',
+  # },
+  { 'base': '?potri', '_types': ['s', 'd'],
+    'fname': 'lapack/potri.c',
+  },
+  # { 'base': '?potri', '_types': ['q'],
+  #   'fname': 'potri.c',
+  # },
+  # BUG: potri is broken
+  # { 'base': '?potri', '_types': ['c', 'z'],
+  #   'fname': 'lapack/zpotri.c',
+  # },
+  # { 'base': '?potri', '_types': ['x'],
+  #   'fname': 'zpotri.c',
+  # },
+  # NOTE: Where are these?
+  # { 'base': '?larf', '_types': ['s', 'd', 'q',
+  #                                'c', 'z', 'x'],
+  #   'fname': 'larf.c',
+  # },
+  # BLAS Extensions
+  { 'base': '?axpby', '_types': ['s', 'd'],
+    'fname': 'axpby.c',
+    'cblas': true,
+  },
+  { 'base': '?axpby', '_types': ['c', 'z'],
+    'fname': 'zaxpby.c',
+    'cblas': true,
+  },
+  { 'base': '?omatcopy', '_types': ['s', 'd'],
+    'fname': 'omatcopy.c',
+    'cblas': true,
+  },
+  { 'base': '?omatcopy', '_types': ['c', 'z'],
+    'fname': 'zomatcopy.c',
+    'cblas': true,
+  },
+  { 'base': '?imatcopy', '_types': ['s', 'd'],
+    'fname': 'imatcopy.c',
+    'cblas': true,
+  },
+  { 'base': '?imatcopy', '_types': ['c', 'z'],
+    'fname': 'zimatcopy.c',
+    'cblas': true,
+  },
+  { 'base': '?geadd', '_types': ['s', 'd'],
+    'fname': 'geadd.c',
+    'cblas': true,
+  },
+  { 'base': '?geadd', '_types': ['c', 'z'],
+    'fname': 'zgeadd.c',
+    'cblas': true,
+  },
+  { 'base': '?xerbla', '_types': [''],
+    'fname': 'xerbla.c',
+    'cblas': true,
+  },
 ]
 
 _interface_libs = []
