Fixed the HUGETLB_ALLOCATION option
Setting HUGETLB_ALLOCATION=1 allocates huge page memory

--- a/Makefile.system
+++ b/Makefile.system
@@ -1590,7 +1590,7 @@ CCOMMON_OPT	+= -DFUNCTION_PROFILE
 endif
 
 ifdef HUGETLB_ALLOCATION
-CCOMMON_OPT	+= -DALLOC_HUGETLB
+CCOMMON_OPT	+= -DALLOC_HUGETLB -DALLOC_SHM
 endif
 
 ifdef HUGETLBFILE_ALLOCATION
